# next-word-prediction

./: README.md  docker-compose.yml
app/: Dockerfile  app.py  predict.py  pyproject.toml
app/static/css/: index.css
app/static/js/: index.js
app/templates/: index.html
