[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
torch = "^1.5.1"
transformers = "^4.30.2"
fasttext = "^0.9.2"
mecab-python3 = "^1.0.6"
unidic-lite = "^1.0.8"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
